# bring-mcp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
src/bring_mcp/: server.py
