[project]
name = "bring-mcp"
version = "1.0.0"
description = "Bring! Shopping List MCP Server for Claude"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["mcp", "bring", "shopping", "claude"]
dependencies = [
    "bring-api>=1.1.2",
    "mcp>=1.27.1",
    "aiohttp>=3.8",
]

[project.scripts]
bring-mcp = "bring_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bring_mcp"]

[tool.uv]
dev-dependencies = []
